Fix image overflow and disable AOS on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -2560,3 +2560,11 @@ body {
         padding: 30px 20px;
     }
 }
+
+
+/* PREVENT OVERFLOW */
+img, video {
+    max-width: 100%;
+    height: auto;
+}
+
